# alphacatan

./: .gitignore  Cargo.toml  perf.data  visualize_board.py
examples/: simulate_game.rs
src/: coords.rs  lib.rs  types.rs
src/board/: mod.rs  node_ids.rs
src/cli/: board_display.rs  compressed_actions.rs  human_player.rs  mod.rs  players.rs  stats.rs  tui.rs
src/env/: mod.rs  python.rs
src/features/: mod.rs
src/game/: action.rs  bank.rs  game.rs  mod.rs  players.rs  resources.rs  state.rs
src/players/: base.rs  mcts.rs  mod.rs  random.rs  tree_search.rs  value.rs
