[package]
name = "catanatron-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "catanatron_rs"
crate-type = ["rlib"]

[features]
default = []

[dependencies]
itertools = "0.12"
lazy_static = "1.5"
once_cell = "1.19"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.13"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.27"
crossterm = "0.28"
plotters = { version = "0.3", features = ["bitmap_backend", "bitmap_encoder"] }

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
]
    
[profile.release]
debug = true
